# Rippir

./: .gitignore  README.md
code/: CMakeLists.txt
code/Rippir/: CMakeLists.txt  pool.cpp  pool.hpp  pool_impl.cpp  pool_impl.hpp
